fix contact information align

--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -172,6 +172,7 @@ li {
   .row {
     margin-left: -15px;
     margin-right: -15px;
+    
 }
 .row::before{
     counter-reset: " ";
@@ -477,6 +478,7 @@ position: relative;
 .col-md-4{
     width: 33.333333333%;
     float: left;
+    min-width: 400px;
 }
 *{
     box-sizing: border-box;
